apps/esphome/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome-deployment
  labels:
    app: esphome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: ghcr.io/esphome/esphome:2023.12.5
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 6052
          protocol: TCP
      volumeMounts:
          - name: config
            mountPath: /config 
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: esphome
