apps/esphome/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  labels:
    app: esphome
spec:
  ports:
  - port: 6052
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: esphome
  clusterIP: None
